# qtBasicApp

./: CMakeLists.txt  README.md  mainwindow.ui  resource.qrc
